--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,3 +24,9 @@ jobs:
         npm test
       env:
         CI: true
+    - name: GitHub Action for Firebase
+      uses: w9jds/firebase-action@v1.1.0
+      with:
+          args: deploy --only hosting
+      env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
