--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,13 +22,6 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
+        .\node_modules\.bin\firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
       env:
         CI: true
-    - name: GitHub Action for Firebase
-      uses: w9jds/firebase-action@v1.1.0
-      with:
-        args: deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-     
-
