--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,7 @@ jobs:
         node-version: 12.x
     - name: npm install, build, and test
       run: |
+        npm i
         npm ci
         npm run build --if-present
         npm test
