--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,6 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
-        firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
+        .\\node_modules\\.bin\\firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
       env:
         CI: true
