--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
+    "cross-env": "^6.0.3",
+    "firebase-tools": "^7.8.0",
     "history": "4.7.2",
     "moment": "2.23.0",
-    "node-sass": "4.11.0",
+    "node-sass": "4.13.0",
     "nouislider": "12.1.0",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.6.2",
@@ -28,8 +30,7 @@
     "react-select": "2.2.0",
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
-    "reactstrap": "7.0.2",
-    "firebase-tools": "^7.8.0"
+    "reactstrap": "7.0.2"
   },
   "optionalDependencies": {
     "@types/googlemaps": "3.30.16",
