--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
     "cross-env": "^6.0.3",
+    "firebase": "^4.13.1",
     "firebase-tools": "^7.8.0",
     "history": "4.7.2",
     "moment": "2.23.0",
