--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
+    "alphavantage": "^2.0.0",
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
     "cross-env": "^6.0.3",
